--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,10 @@
-<h1>congratulation!!</h1>
+<div class='container-fluid top-view'>
+  <div class='row font top-text-height'>
+    <p class='mx-auto top-text'><strong>BICS</strong></p>
+  </div>
+  <div class='row font top-text-height'>
+    <p class='mx-auto top-button'>
+      <strong><%= link_to 'start', ideas_path, class:'btn top-button' %></strong>
+    </p>
+  </div>
+</div>
