--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,3 +149,63 @@ li span {
   }
 
 }
+
+
+
+//public
+
+//idea#new
+.newidea {
+  input {
+      border: none;
+      outline: none;
+      border-bottom: solid;
+      background-color: transparent;
+  }
+  textarea {
+    background-color: transparent;
+  }
+  .length {
+      width: 400px;
+  }
+
+}
+
+//idea#index
+
+.card {
+  width: 500px;
+  height: 600px;
+  margin-right: 100px;
+  margin-bottom: 50px;
+}
+
+.card_design {
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px #7d7d7d;
+}
+
+.card_textbox {
+  height: 150px;
+  padding: 10px 30px;
+}
+
+.card_text_title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.card_text_content {
+  padding: 20px 0;
+  font-size: 20px;
+}
+
+.card_info_box {
+  padding: 10px 30px;
+}
+
+.card_info_content {
+    display: inline-block;
+    margin-right: 40px;
+}
