--- a/app/views/public/ideas/index.html.erb
+++ b/app/views/public/ideas/index.html.erb
@@ -1,5 +1,16 @@
 <div class='container'>
+  
   <div class='row'>
     <h1>ideas</h1>
   </div>
+  
+  <div class='ro'>
+    <% @ideas.each do |idea| %>
+      <div>
+        <%= idea.title %>
+        <%= attachment_image_tag idea, :icon, height:'120', fallback:'no_image.png' %> 
+      </div>
+    <% end %>
+  </div>
+  
 </div>
