--- a/app/views/public/ideas/index.html.erb
+++ b/app/views/public/ideas/index.html.erb
@@ -4,7 +4,7 @@
     <h1>ideas</h1>
   </div>
   
-  <div class='ro'>
+  <div class='row'>
     <% @ideas.each do |idea| %>
       <div>
         <%= idea.title %>
