--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -31,8 +31,8 @@
             </div>
           </div>
           <div class='card_info_box'>
-            <div class='card_info_content'>お気に入り</div>
-            <div class='card_info_content'>コメント数</div>
+            <div class='card_info_content'></div>
+            <div class='card_info_content'>コメント数:<%= idea.comments.count %></div>
             <div class='card_info_content'>評価</div>
           </div>
       </div>
