--- a/app/views/public/ideas/show.html.erb
+++ b/app/views/public/ideas/show.html.erb
@@ -48,15 +48,29 @@
             <p><%= image_tag('no_image.png') %></p>
             <%= comment.user.name %>
             <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+            <div class='idea-review' data-score='<%=comment.review %>'></div>
              <% if comment.user == current_user %>
             <div class="comment-delete">
-              <%= link_to "削除", idea_comment_path(comment.idea, comment), method: :delete %>
+              <%= link_to "削除", idea_path(@idea), method: :delete %>
             </div>
             <% end %>
           <% end %>
         </div>
         <div class="new-comment">
           <%= form_with(model:[@idea, @comment], local: true) do |f| %>
+            <div id='review_stars'>
+              <label>評価</label>
+              <%= f.hidden_field :review_stars, id: :review_star %>
+              <script>
+                $('#review_stars').raty({
+                  starOn: "<%= asset_path('star-on.png') %>",
+                  starOff: "<%= asset_path('star-off.png') %>",
+                  starHalf: "<%= asset_path('star-half.png') %>",
+                  scoreName: 'comment[review]',
+                  half: true,
+                });
+              </script>
+            </div>
             <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
             <%= f.submit "送信する" %>
           <% end %>
@@ -67,3 +81,13 @@
     </div>
   </div>
 </div>
+
+<script>
+$('.idea-review').raty({
+  readOnly: true,
+  score: function(){
+    return $(this).attr('data-score');
+  },
+  path: '/assets/'
+});
+</script>
