--- a/app/views/public/ideas/show.html.erb
+++ b/app/views/public/ideas/show.html.erb
@@ -27,6 +27,15 @@
         </tr>
         <tr>
           <td><%= @idea.user.name %></td>
+          <td>
+            <% if current_user != @user %>
+              <% if current_user.following?(@user) %>
+                <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete %>
+              <% else %>
+                <%= link_to 'フォローする', user_relationships_path(@user.id), method: :post %>
+              <% end %>
+            <% end %>
+          </td>
         </tr>
         <tr>
           <td><label>Tag</label></td>
