--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -8,7 +8,9 @@
 
   <div class='row'>
     <div class='col-md-4'>
-      <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format:'jpeg', fallback:'no_profile.jpg' %>
+      <div class='center'>
+        <%= attachment_image_tag @user, :profile_image, :fill, 200, 200, format:'jpeg', fallback:'no_profile.jpg' %>
+      </div>
     </div>
     <div class='col-md-5'>
       <table class="table table-borderless">
@@ -43,5 +45,10 @@
         <%= link_to "Edit", edit_user_path(current_user), class: "btn btn-dark" %></td>
       </div>
     </div>
+  </div>
+  <div>
+    <% if current_user != @user %>
+      <%= link_to 'chatを始める', chat_path(@user.id) %>
+    <% end %>
   </div>
 </div>
