--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div>
       <% @users.each do |user| %>
-        <%= users.name %>
+        <%= user.name %>
       <% end %>
     </div>
   </div>
