--- a/app/views/public/relationships/followings.html.erb
+++ b/app/views/public/relationships/followings.html.erb
@@ -1,8 +1,22 @@
 <div class='container'>
   <div class='row'>
-    <div>
+    <h3>フォロー一覧</h3>
+  </div>
+  <div class='row'>
+    <%= render 'public/users/sidebar', user: @user %>
+    
+    <div class='col-md-7 offset-md-2'>
       <% @users.each do |user| %>
+        <table class='table table-borderless'>
+          <thead>
+            <tr>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
         <%= link_to user.name, user_info_user_path(user), class:''%>
+        </table>
       <% end %>
     </div>
   </div>
