--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="col-md-6">
-      <h2>Detail of <%= @user.name %></h2>
+      <h2><%= @user.name %> の情報</h2>
     </div>
   </div>
 
