--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class='nav-whole text-light'>
-  <p class='center'><%= link_to 'BICS', ideas_path, class:'nav-bics text-light', :style => 'text-decoration:none' %></p>
+  <p class='center'><%= link_to 'BICS', search_path, class:'nav-bics text-light', :style => 'text-decoration:none' %></p>
 </nav>
 <nav>
   <% if user_signed_in? %>
