--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -23,6 +23,14 @@
           <td><%= @user.kana_name %></td>
         </tr>
         <tr>
+          <td><label>Introduction</label></td>
+          <td><%= @user.introduction %></td>
+        </tr>
+        <tr>
+          <td><label>Speciality</label></td>
+          <td><%= @specialities.name %></td>
+        </tr>
+        <tr>
           <td><label>Postal Code</label></td>
           <td><%= @user.postal_code %></td>
         </tr>
