--- a/app/views/public/favorites/index.html.erb
+++ b/app/views/public/favorites/index.html.erb
@@ -1,9 +1,39 @@
 <div class='container'>
   <div class='row'>
-    <div>
-      <% @favorites.each do |favorite| %>
-        <%= favorite.idea.title %>
-      <% end %>
+    <%= render 'public/users/username', user: @user %>
+  </div>
+  <div class='row'>
+    <h3 class='col-md-3 offset-md-3'>お気に入り一覧</h3>
+  </div>
+  <div class='row'>
+    
+    <%= render 'public/users/sidebar', user: @user %>
+    
+  <% if @favorites.empty? %>
+    <div class='col-md-4 offset-md-2'>
+      お気に入りのアイデアがありません
     </div>
+  <% else %>    
+    <div class='col-md-7 offset-md-1'>
+      <table class='table table-borderless tabledesign'>
+        <thead class='thead-color'>
+          <tr>
+            <th>icon</th>
+            <th>title</th>
+            <th>content</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @favorites.each do |favorite| %>
+            <tr>
+              <th><%= attachment_image_tag favorite.idea, :icon, :fill, 60, 60, format:'jpeg', fallback:'no_image.png', size:'60x60' %></th>
+              <th><%= link_to favorite.idea.title, idea_path(favorite.idea), class:'text-dark', :style => 'text-decoration:none;' %></th>
+              <th><div style='overflow:hidden;'><%= favorite.idea.content %></div></th>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% end %>
   </div>
 </div>
