--- a/app/views/public/ideas/search.html.erb
+++ b/app/views/public/ideas/search.html.erb
@@ -32,6 +32,9 @@
       </div>
     <% end %>
   </div>
+  <div class='row center pagination-design'>
+    <p><%= paginate @ideas %></p>
+  </div>
 </div>
 
 <script>
