--- a/app/views/public/relationships/followers.html.erb
+++ b/app/views/public/relationships/followers.html.erb
@@ -1,9 +1,47 @@
 <div class='container'>
   <div class='row'>
-    <div>
-      <% @users.each do |user| %>
-        <%= user.name %>
-      <% end %>
+    <%= render 'public/users/username', user: @user %>
+  </div>
+  <div class='row'>
+    <h3 class='col-md-3 offset-md-3'>フォロワー一覧</h3>
+  </div>
+  <div class='row'>
+    <%= render 'public/users/sidebar', user: @user %>
+  <% if @users.empty? %>
+    <div class='col-md-4 offset-md-2'>
+      誰にもフォローされていません
     </div>
+  <% else %>    
+    <div class='col-md-7 offset-md-1'>
+      <table class='table table-borderless'>
+        <thead class='thead-color'>
+          <tr>
+            <th></th>
+            <th>名前</th>
+            <th>紹介</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <th><%= attachment_image_tag user, :profile_image, :fill, 60, 60, format:'jpeg', fallback:'no_image.png', size:'60x60' %></th>
+              <th><%= link_to user.name, user_info_user_path(user), class:'text-dark', :style => 'text-decoration:none;' %></th>
+              <th><%= user.introduction %></th>
+              <th>
+                <% if current_user != user %>
+                  <% if current_user.following?(user) %>
+                    <%= link_to 'フォロー中', user_relationships_path(user.id), method: :delete, class:'text-success' %>
+                  <% else %>
+                    <%= link_to 'フォローする', user_relationships_path(user.id), method: :post %>
+                  <% end %>
+                <% end %>
+              </th>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% end %>
   </div>
 </div>
