--- a/app/views/public/users/_sidebar.html.erb
+++ b/app/views/public/users/_sidebar.html.erb
@@ -2,9 +2,9 @@
 
   <div class='user-info-abst'>マイページ</div>
   <div class='user-info-content'>
-    <%= link_to 'マイページTOP', users_path(current_user), class:'text-dark', :style => 'text-decoration:none;' %>
+    <%= link_to 'マイページTOP', user_info_user_path(current_user), class:'text-dark', :style => 'text-decoration:none;' %>
   </div>
-  
+
   <% if user == current_user %>
     <div class='user-info-abst'>登録情報</div>
     <div class='user-info-content'>
@@ -20,23 +20,22 @@
   <div class='user-info-content'>
     <%= link_to 'フォロワー一覧', user_followers_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
   </div>
-
-  <div class='user-info-abst'>お気に入り</div>
-  <div class='user-info-content'>
-    <%= link_to 'お気に入り一覧', idea_favorites_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
-  </div>
-
-  <div class='user-info-abst'>コメント</div>
-  <div class='user-info-content'>
-    <%= link_to '過去のコメント', idea_comments_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
-  </div>
-  
   <% if user == current_user %>
+    <div class='user-info-abst'>お気に入り</div>
+    <div class='user-info-content'>
+      <%= link_to 'お気に入り一覧', idea_favorites_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
+    </div>
+    
+    <div class='user-info-abst'>コメント</div>
+    <div class='user-info-content'>
+      <%= link_to '過去のコメント', idea_comments_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
+    </div>
+
     <div class='user-info-abst'>チャット</div>
     <div class='user-info-content'>
       <%= link_to 'チャット', chat_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
     </div>
-    
+
     <div class='user-info-abst'>ログアウト</div>
     <div>
       <div class='user-info-content'>
