--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,7 +4,7 @@
       <h2>Sign up</h2>
     </div>
   </div>
-  <div class='row center newitem'>
+  <div class='row center newidea'>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="form-group">
         <%= f.label :name %>
@@ -14,6 +14,11 @@
       <div class="form-group">
         <%= f.label :hiragana %>
         <%= f.text_field :kana_name, class: "form-control" %>
+      </div>
+      
+      <div class='form-group'>
+        <%= f.label :introduction %>
+        <%= f.text_area :introduction, class:'form-control', size:'40x6' %>
       </div>
 
       <div class="form-group">
