--- a/app/views/public/ideas/show.html.erb
+++ b/app/views/public/ideas/show.html.erb
@@ -60,7 +60,7 @@
             <div class='idea-review' data-score='<%=comment.review %>'></div>
              <% if comment.user == current_user %>
             <div class="comment-delete">
-              <%= link_to "削除", idea_path(@idea), method: :delete %>
+              <%= link_to "削除", idea_comment_path(comment.idea, comment), method: :delete %>
             </div>
             <% end %>
           <% end %>
@@ -88,6 +88,11 @@
     <div>
       <%= render 'public/ideas/favorite', idea: @idea %>
     </div>
+    <div>
+      <%= @idea.chart_review(@comments).each do |u| %>
+       <%= u %>
+      <% end %>
+    </div>
   </div>
 </div>
 
@@ -101,4 +106,40 @@ $('.idea-review').raty({
   starOff: "<%= asset_path('star-off.png') %>",
   starHalf: "<%= asset_path('star-half.png') %>",
 });
+</script>
+
+<div style='width:600px; height:600px;'>
+<canvas id="Chart"></canvas>
+</div>
+<script>
+var ctx = document.getElementById('Chart');
+
+var chart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+        labels: ['5', '4.5', '4', '3.5', '3', 'Orange'],
+        datasets: [
+          {
+            label: '# of Votes',
+            data: <%= @idea.chart_review(@comments) %>,
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    }
+})
 </script>
