--- a/app/views/public/ideas/search.html.erb
+++ b/app/views/public/ideas/search.html.erb
@@ -38,6 +38,7 @@
 </div>
 
 <script>
+$('.idea-review').empty();
 $('.idea-review').raty({
   readOnly: true,
   starOn: "<%= asset_path('star-on.png') %>",
