--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,12 +1,12 @@
 <% if idea.favorited_by?(current_user) %>
   <p>
-    <%= link_to idea_favorite_path(idea), method: :delete do %>
+    <%= link_to idea_favorites_path(idea.id), method: :delete, remote: true do %>
       ♥<%= idea.favorites.count %>
     <% end %>
   </p>
 <% else %>
   <p>
-    <%= link_to idea_favorites_path(idea), method: :post do %>
+    <%= link_to idea_favorites_path(idea.id), method: :post, remote: true do %>
       ♡<%= idea.favorites.count %>
     <% end %>
   </p>
